--- a/src/component/Shop/Shop.css
+++ b/src/component/Shop/Shop.css
@@ -9,3 +9,15 @@
     margin-left: 40px;
     margin-top: 40px;
 }
+@media screen and (max-width:480px) {
+    .product-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+.cart{
+    background-color: lightcoral;
+    border-radius: 8px;
+    position: sticky;
+    top: 0;
+    margin: 30px 20px;
+}
